# llamalib

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  llama.diff  ref-llama.h  requirements.txt  setup.py
docs/: archive.pyx  challenge-haiku-2.md  challenge-haiku.md  challenges.md  model-performance.md  opaque-pointers-pybind11.md  research.md  scratch.pyx  snips.cpp
include/: debug.h  ggml.h  llama.h
projects/: CMakeLists.txt
projects/cyllama/: CMakeLists.txt  README.md  cyllama.c  cyllama.cpp  cyllama.pyx  llama.pxd  llama_cpp.pxd
projects/llamalib/: README.md  llamalib.h
projects/nbllama/: CMakeLists.txt  nbllama.cpp
projects/pbllama/: CMakeLists.txt  llamalib.h  pbllama.cpp
projects/scratch/: CMakeLists.txt  scratch.cpp
scripts/: bump.sh  funcs.sh  mikupad.html  setup.sh
scripts/bind/: all_includes.hpp  bind.mk  config.txt
tests/: conftest.py  cy_main.py  cy_simple.py  cy_simple_highlevel.py  nb_simple.py  nb_simple_highlevel.py  pb_highlevel.py  pb_simple.py  pb_simple2.py  pb_simple_highlevel.py  poem.py  simple.cpp  simple.py  simple2.cpp  test_cy_simple.py  test_nb_simple.py  test_pb_simple.py  test_scratch.py  test_simple.py
tests/nested/: .gitignore  Makefile  demo.bak.pyx  demo.pyx  setup.py
